force-app/main/default/objects/Course_Run__c/Course_Run__c.object-meta.xml
<CustomObject>
    <label>Course Run</label>
    <nameField>
        <displayFormat>COURSERUN-{000000}</displayFormat>
        <label>Course Run Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Run</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>