force-app/main/default/objects/Course_Run__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please ensure that this is checked if you wish to publish a change to the record</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>