force-app/main/default/objects/Course_Run__c/fields/Attendence_Report__c.field-meta.xml
<CustomField>
    <fullName>Attendence_Report__c</fullName>
    <formula>HYPERLINK( $Label.SF_URL &amp; &quot;/lightning/r/Report/00O2w000008EKZ1EAO/view?fv0=&quot; &amp; Name, &quot;Attendence Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendence Report</label>
    <type>Text</type>
</CustomField>