force-app/main/default/objects/Course_Run__c/fields/Budget_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Budget_Revenue__c</fullName>
    <label>Budget Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>