force-app/main/default/objects/Course_Run__c/fields/Certificate_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Course_Name__c</fullName>
    <label>Certificate Course Name</label>
    <type>TextArea</type>
</CustomField>