force-app/main/default/objects/Course_Run__c/fields/Certificate_Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Instructor_Name__c</fullName>
    <label>Certificate Instructor Name</label>
    <type>TextArea</type>
</CustomField>