force-app/main/default/objects/Course_Run__c/fields/Certificate_Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Start_End_Date__c</fullName>
    <label>Certificate Start End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>