force-app/main/default/objects/Course_Run__c/fields/CMS_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>CMS_Request_Date__c</fullName>
    <label>CMS Request Date</label>
    <type>DateTime</type>
</CustomField>