force-app/main/default/objects/Course_Run__c/fields/Course_Run_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Code__c</fullName>
    <externalId>true</externalId>
    <label>Course Run Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>