force-app/main/default/objects/Course_Run__c/fields/Course_Run_Code_No__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Code_No__c</fullName>
    <formula>right( Course_Run_Code__c ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run Code No</label>
    <type>Text</type>
</CustomField>