force-app/main/default/objects/Course_Run__c/fields/Course_Run_ID18__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run ID18</label>
    <type>Text</type>
</CustomField>