force-app/main/default/objects/Course_Run__c/fields/Course_Run_Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Start_End_Date__c</fullName>
    <formula>Text(Day(Start_Date__c)) &amp; &quot;/&quot; &amp; 
Text(Month(Start_Date__c)) &amp; &quot;/&quot; &amp; 
Text(Year(Start_Date__c)) &amp; &quot; - &quot; &amp;
Text(Day( End_Date__c )) &amp; &quot;/&quot; &amp; 
Text(Month(End_Date__c)) &amp; &quot;/&quot; &amp; 
Text(Year(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run Start End Date</label>
    <type>Text</type>
</CustomField>