force-app/main/default/objects/Course_Run__c/fields/Course_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Status__c</fullName>
    <label>Course Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>