force-app/main/default/objects/Course_Run__c/fields/Course_Run_Survey__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MVP1.0 - Select the Survey Questionnaire to be sent to the Learners</description>
    <inlineHelpText>Select the Survey Questionnaire to be sent to the Learners</inlineHelpText>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Course Run</relationshipLabel>
    <relationshipName>Course_Run</relationshipName>
    <type>Lookup</type>
</CustomField>