force-app/main/default/objects/Course_Run__c/fields/CourseFee__c.field-meta.xml
<CustomField>
    <fullName>CourseFee__c</fullName>
    <formula>IF( CourseRecordType__c == &apos;Funded_Course&apos; , Course__r.Full_Fee__c, Course__r.Non_Member_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CourseFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>