force-app/main/default/objects/Course_Run__c/fields/CourseRecordType__c.field-meta.xml
<CustomField>
    <fullName>CourseRecordType__c</fullName>
    <formula>Course__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CourseRecordType</label>
    <type>Text</type>
</CustomField>