force-app/main/default/objects/Course_Run__c/fields/Date_Remark__c.field-meta.xml
<CustomField>
    <fullName>Date_Remark__c</fullName>
    <label>Date Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>