force-app/main/default/objects/Course_Run__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jumping</fullName>
            </value>
            <value>
                <fullName>Consecutive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>