force-app/main/default/objects/Course_Run__c/fields/Delivery_Track__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Track__c</fullName>
    <label>Delivery Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Sectoral</fullName>
            </value>
            <value>
                <fullName>Company Contextualisation</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>