force-app/main/default/objects/Course_Run__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>