force-app/main/default/objects/Course_Run__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;17:00:00.000&quot;)</defaultValue>
    <label>End Time</label>
    <type>Time</type>
</CustomField>