force-app/main/default/objects/Course_Run__c/fields/End_Time_fmla__c.field-meta.xml
<CustomField>
    <fullName>End_Time_fmla__c</fullName>
    <formula>TEXT(TIMEVALUE(End_Time__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Text</type>
</CustomField>