force-app/main/default/objects/Course_Run__c/fields/Funded_Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Registration_Close_Date__c</fullName>
    <label>Funded Registration Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>