force-app/main/default/objects/Course_Run__c/fields/Global_Discount_Fee__c.field-meta.xml
<CustomField>
    <fullName>Global_Discount_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Discount Fee</label>
    <type>Checkbox</type>
</CustomField>