force-app/main/default/objects/Course_Run__c/fields/Global_Discount_Flag__c.field-meta.xml
<CustomField>
    <fullName>Global_Discount_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Discount Flag</label>
    <type>Checkbox</type>
</CustomField>