force-app/main/default/objects/Course_Run__c/fields/Max_No_of_Trainees__c.field-meta.xml
<CustomField>
    <fullName>Max_No_of_Trainees__c</fullName>
    <label>Max No of Trainees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>