force-app/main/default/objects/Course_Run__c/fields/Provider_URL__c.field-meta.xml
<CustomField>
    <fullName>Provider_URL__c</fullName>
    <formula>IF( AND(ISPICKVAL(Course__r.Provider__c, &apos;SIM&apos;), ISPICKVAL(Course__r.Mode_Of_Study__c, &apos;Online&apos;)),&apos;https://onlinelearn.sim.edu.sg/courses/&apos; &amp;  Course__r.Provider_Id__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider URL</label>
    <type>Text</type>
</CustomField>