force-app/main/default/objects/Course_Run__c/fields/Public_Early_Bird_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Early_Bird_End_Date__c</fullName>
    <label>Public Early Bird End Date</label>
    <type>Date</type>
</CustomField>