force-app/main/default/objects/Course_Run__c/fields/Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Publish_Status__c</fullName>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMS_Publish_Status</valueSetName>
    </valueSet>
</CustomField>