force-app/main/default/objects/Course_Run__c/fields/Published_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_End_Date__c</fullName>
    <label>Published End Date</label>
    <type>Date</type>
</CustomField>