force-app/main/default/objects/Course_Run__c/fields/Published_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Published_End_Time__c</fullName>
    <label>Published End Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>