force-app/main/default/objects/Course_Run__c/fields/Published_Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Registration_Close_Date__c</fullName>
    <label>Published Registration Close Date</label>
    <type>Date</type>
</CustomField>