force-app/main/default/objects/Course_Run__c/fields/Published_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Start_Date__c</fullName>
    <label>Published Start Date</label>
    <type>Date</type>
</CustomField>