force-app/main/default/objects/Course_Run__c/fields/Published_Venue__c.field-meta.xml
<CustomField>
    <fullName>Published_Venue__c</fullName>
    <label>Published Venue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>