force-app/main/default/objects/Course_Run__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <formula>&quot;https://simstream1-simdigital.cs113.force.com/s/courseregistration?courseruncode=&quot; + Course_Run_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Link</label>
    <type>Text</type>
</CustomField>