force-app/main/default/objects/Course_Run__c/fields/Registration_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Open_Date__c</fullName>
    <label>Registration Open Date</label>
    <type>Date</type>
</CustomField>