force-app/main/default/objects/Course_Run__c/fields/Run_Duration__c.field-meta.xml
<CustomField>
    <fullName>Run_Duration__c</fullName>
    <description>Calculated based on Start and End Date</description>
    <formula>IF(ISPICKVAL(Course__r.Course_Type__c,&apos;Self-Paced&apos;), Course__r.Self_Paced_Access_Duration_Months__c, (((12 * (YEAR(End_Date__c) - YEAR(Start_Date__c))) + MONTH(End_Date__c) - MONTH(Start_Date__c)) + 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on Start and End Date</inlineHelpText>
    <label>Run Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>