force-app/main/default/objects/Course_Run__c/fields/Run_Hours__c.field-meta.xml
<CustomField>
    <fullName>Run_Hours__c</fullName>
    <label>Run Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>