force-app/main/default/objects/Course_Run__c/fields/Run_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Run_Minutes__c</fullName>
    <label>Run Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>