force-app/main/default/objects/Course_Run__c/fields/Sectorial_Delivery_Track__c.field-meta.xml
<CustomField>
    <fullName>Sectorial_Delivery_Track__c</fullName>
    <label>Sectorial Delivery Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Contextualisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>