force-app/main/default/objects/Course_Run__c/fields/Session_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Details__c</fullName>
    <label>Session Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>