force-app/main/default/objects/Course_Run__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;08:00:00.000&quot;)</defaultValue>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>