force-app/main/default/objects/Course_Run__c/fields/Start_Time_fmla__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_fmla__c</fullName>
    <formula>TEXT(Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>