force-app/main/default/objects/Course_Run__c/fields/Stop_Survey__c.field-meta.xml
<CustomField>
    <fullName>Stop_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MVP1.0 - Check this Box when you want to STOP Sending a Survey</description>
    <inlineHelpText>Check this Box when you want to STOP Sending a Survey</inlineHelpText>
    <label>Stop Survey</label>
    <type>Checkbox</type>
</CustomField>