force-app/main/default/objects/Course_Run__c/fields/Survey_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_On__c</fullName>
    <description>MVP1.0 - The Date/Time when Survey will be sent OR already has been sent</description>
    <inlineHelpText>The Date/Time when Survey will be sent OR already has been sent</inlineHelpText>
    <label>Survey Sent On</label>
    <type>DateTime</type>
</CustomField>