force-app/main/default/objects/Course_Run__c/validationRules/Course_Run_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Run_End_Date</fullName>
    <active>true</active>
    <description>Validate if Course Run End Date is before Start Date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Please choose an End Date ON OR AFTER the Start Date</errorMessage>
</ValidationRule>