force-app/main/default/objects/Course_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Run_Code__c</columns>
    <columns>Course_Title__c</columns>
    <columns>Course_Run_Start_End_Date__c</columns>
    <columns>Publish_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>